# Smart-Customer-support

./: README.md
Hackthon/: Dockerfile  README.md  baseline.py  env.py  openenv.yaml  pyproject.toml  requirements.txt  space.yml  tasks.py
Hackthon/server/: app.py
