[project]
name = "smart-customer-support"
version = "0.1.0"
description = "OpenEnv Customer Support Simulation"
authors = [
    {name = "Vanaja"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"